--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -11,7 +11,7 @@
     display:flex;
     flex-direction: row;
     justify-content: flex-end;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 
 .navtabs a{
@@ -26,10 +26,21 @@
     margin: 10px; 
 }
 
-.navtabs i{
-    background-color: black;
+.rounded-circle{
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+    position: relative;
+}
+
+
+.navtabs img{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    top: 0;
+    right:0;
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    margin-left: 20px;
 }
