--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     scroll-behavior: smooth;
     font-family: 'Courier New', Courier, monospace;
     font-size: medium;
-    background-color:antiquewhite;
+    /*background-color:antiquewhite;*/
     padding: 0;
     margin: 0;
 }
