Login In Progress - Added a submit button that redirects to the profile

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -10,3 +10,9 @@
     margin-top: 200px;
     margin-left: 650px;
 }
+
+.submitButton {
+    font-size: 100%;
+    margin-top: 25px;
+    margin-left: 775px;
+}
