Sign Up Completed Draft - Sign up draft completed, lets user enter in a username and password 8-16 characters long (implement the length checking later) and redirects the user to the login page after done signing up

--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -1,23 +1,17 @@
-.loginTitle {
+.signUpTitle {
     position: absolute;
     font-size: 250%;
     top: 150px;
     left: 100px;
 }
 
-.signInCreds {
+.signUpCreds {
     font-size: 100%;
     margin-top: 175px;
     margin-left: 100px;
 }
 
-.submitButton {
-    font-size: 100%;
-    margin-top: 25px;
-    margin-left: 100px;
-}
-
-.signupButton {
+.submitSignUp {
     font-size: 100%;
     margin-top: 50px;
     margin-left: 100px;
