Created bare-bones prototype for "My Workouts"
If time permits, can implement a "sort-by" feature for "

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -48,7 +48,7 @@
     font-size: 150%;
 }
 
-.list Button{
+.searchList Button{
     text-decoration: none;
     color: brown;
     font-size: 125%;
