--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -1,13 +1,15 @@
 .profile img{
     border-radius: 50%;
-    margin: 50px;
+    position:absolute;
+    top:175%;
+    left:175%;
     width: 250px;
     height: 250px;
 }
 
 .profileText{
-    margin-left: 380px;
-    margin-top: 40px;
+    margin-left: 35%;
+    margin-top: 4%;
     font-size: xx-large;
 }
 
@@ -17,17 +19,10 @@
 }
 
 .lesserText p{
-    margin-top: 50px;
-    margin-left: 20px;
+    margin-top: 7%;
+    margin-left: 6%;
     font-size: x-large;
     line-height: 0px;
-}
-
-.bio{
-    font-size: 160%;
-    margin-left: 380px;
-    margin-top: 75px;
-    width: 800px;
 }
 
 .buttons a{
@@ -38,6 +33,12 @@
 
 .buttons{
     position: absolute;
-    left:100px;
-    top:410px;
+    left:43%;
+    top:53%;
+}
+
+.signOut{
+    position: absolute;
+    top:150%;
+    left:17%;
 }
