Slightly modified spacing in login/signup

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -22,3 +22,11 @@
     margin-top: 50px;
     margin-left: 100px;
 }
+
+.usernameField{
+    margin-left: 1%;
+}
+
+.psswdField{
+    margin-left: 1%;
+}
