--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -16,3 +16,11 @@
     margin-top: 50px;
     margin-left: 100px;
 }
+
+.signUpUsernameField{
+    margin-left: 1%;
+}
+
+.signUpPsswdField{
+    margin-left: 1%;
+}
