--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -31,7 +31,7 @@
     text-align: center;
     border-color:gray;
     border-radius: 10px;
-    background-color: lightcyan;
+    background-color: #F3EDEC;
 }
 
 .searchButton Button{
