--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -55,3 +55,39 @@
     color: brown;
     font-size: 125%;
 }
+
+.popup-content{
+    width: 75%;
+    height: 75%;
+    background-color: aliceblue;
+}
+
+.popupTitle{
+    font-size: 200%;
+    font-weight: bold;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: absolute;
+    top:5%;
+    left:38.5%;
+}
+
+.popupString{
+    font-size: 150%;
+    position: absolute;
+    top:17.5%;
+    left:15%;
+    white-space:pre-line;
+    line-height: 200%;
+}
+
+.likeButton{
+    position: absolute;
+    right:22.5%;
+    top:6%;
+}
+
+.saveButton{
+    position: absolute;
+    right:10%;
+    top:6%;
+}
