--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -56,7 +56,7 @@
     font-size: 125%;
 }
 
-.popup-content{
+.workoutPopup-content{
     width: 75%;
     height: 75%;
     background-color: aliceblue;
