--- a/src/components/create/create.css
+++ b/src/components/create/create.css
@@ -14,6 +14,7 @@
     position: absolute;
     top: 24%;
     margin-left: 7%;
+    height: 100%;
 }
 
 .createTagBox p{
@@ -22,8 +23,8 @@
 }
 
 .createTagBox textarea{
-    width:200px;
-    height:275px;
+    width:100%;
+    height:42%;
     resize:none;
     text-align: center;
     border-color:brown;
@@ -33,13 +34,14 @@
 .clearButton{
     position: absolute;
     bottom:13%;
-    left:10%;
+    left:10.5%;
 }
 
 .exercise{
     position: absolute;
     top:27.5%;
     left:35%;
+    height:100%;
 }
 
 .exercise p{
@@ -51,7 +53,7 @@
 .exercise textarea{
     resize: none;
     text-align: center;
-    height: 27px;
+    height: 4.25%;
 }
 
 .exerciseButton{
@@ -61,22 +63,35 @@
 }
 
 .workoutPreviewBox{
-    width:350px;
-    height:275px;
+    width:30%;
+    height:42.2%;
     resize:none;
     text-align: center;
     border-color:brown;
     border-radius: 10px;
+    position: absolute;
+    left:71%;
+    top:8%;
 }
 
 .workoutPreview{
     position: absolute;
-    right:10%;
+    right:7%;
     top:27.1%;
+    height:100%;
+    width: 120%;
 }
 
 .workoutPreview p{
     font-size: 125%;
+    position: absolute;
+    right:23%;
+}
+
+.name{
+    font-size: 125%;
+    position: absolute;
+    right:20%;
 }
 
 .workoutButton{
@@ -92,10 +107,11 @@
 }
 
 .nameInput{
-    width:277px;
+    width:350px;
     height:31px;
     resize: none;
     position: absolute;
-    top:0%;
+    top:3px;
     left:20.5%;
+    margin-left: 1%;
 }
