Adjusted settings page for clarity
Popups will not close when input is incorrect; will display
error message instead
Popups now indicate requirements for username and password when
changing them

--- a/src/components/settings/settings.css
+++ b/src/components/settings/settings.css
@@ -32,3 +32,9 @@
 .settingsPopupTitle{
     margin:10px;
 }
+
+.settingsPopupSubtitle{
+    margin:10px;
+    font-size: 75%;
+    color:dodgerblue;
+}
