made a few quality of life changes to create page

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 * {
     scroll-behavior: smooth;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Helvetica-BoldOblique, monospace;
     font-size: medium;
     padding: 0;
     margin: 0;
