--- a/src/components/create/create.css
+++ b/src/components/create/create.css
@@ -62,6 +62,12 @@
     left:35%;
 }
 
+.errorMessage{
+    position: absolute;
+    bottom:7%;
+    left:32%;
+}
+
 .workoutPreviewBox{
     width:150%;
     height:42.2%;
