Implemented profile picture graphic
Do not have sufficient time to implement a proper profile picture, so
settle for making a "profile pic" that is a the first letter of the
username

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -52,3 +52,12 @@
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder;
 }
+
+.profileLetter{
+    position: absolute;
+    font-size: 200%;
+    color:floralwhite;
+    right:3.42%;
+    top:13%;
+    user-select: none;
+}
