--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -3,8 +3,8 @@
     position:absolute;
     top:250%;
     left:175%;
-    width: 250px;
-    height: 250px;
+    width: 500%;
+    height: 500%;
 }
 
 .profileText{
